[piao&liang] Refactor parkingBoy and tasks.